# imaplw

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  IMAP.cpp  LICENSE.md  README.md  build_osx_brew.sh  exampleConfig.conf  imaplw.sublime-project  imaplw.sublime-workspace  poll.hpp  setup_build.sh  snakeoil.sh  sockStream.hpp
CMake/: CCache.cmake  GetLibreSSL.cmake  GetMimetic.cmake
IMAP/: DataProvider.hpp  IMAPClientState.hpp  Providers.hpp
mimetic-patches/: patch.sh
src/: CMakeLists.txt  IMAP.cpp
src/cfgParser/: Config.hpp
test/: CMakeLists.txt  cli.py  mimetic_test.cpp  miniz_test.cpp  script1.txt  script2.txt  script3.txt
